Tue Feb 10 21:14:43 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sockaddr_obj): fill pfamily.

Tue Feb 10 21:09:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_s_bool): new method.
	  (sockopt_bool): new method.

Tue Feb 10 20:58:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_family_m): renamed from sockopt_family.
	  (sockopt_level_m): renamed from sockopt_level.
	  (sockopt_optname_m): renamed from sockopt_optname.
	  (inspect_local_peercred): follow the renaming.
	  (Init_sockopt): ditto.

Tue Feb 10 20:56:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_creds): refactored to avoid
	  a rb_str_cat2 call.

Tue Feb 10 04:34:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (when): makes parentheses balanced.

Tue Feb 10 01:28:49 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ip_cmsg_type_to_sym): renamed from
	  cmsg_type_to_sym.

Tue Feb 10 01:22:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): refactored.

Tue Feb 10 01:02:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: generate intern_family_noprefix.

	* ext/socket/option.c (sockopt_inspect): use intern_family_noprefix
	  not to show AF_ prefix.

	* ext/socket/ancdata.c (ancillary_inspect): ditto.

Mon Feb  9 23:21:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/constants.c (level_arg): use unknown_level_to_int for
	  non internet protocol.
	  (optname_arg): use only so_optname_to_int for non internet protocol.
	  (cmsg_type_arg): use only scm_optname_to_int for non internet
	  protocol.

	* ext/socket/mkconstants.rb: generate unknown_level_to_int.
	  rename iplevel_to_int to ip_level_to_int.

Mon Feb  9 23:04:27 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: rename level_to_int to iplevel_to_int.
	  rename intern_level to intern_iplevel.

	* ext/socket/constants.c: follow the renaming.
